--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 decorator==3.4.0
+docutils==0.12
 graphviz==0.4.2
+guppy==0.1.10
 matplotlib==1.4.2
 mock==1.0.1
 networkx==1.9.1
@@ -11,4 +13,5 @@ pyparsing==1.5.7
 python-dateutil==2.3
 pytz==2014.10
 six==1.8.0
+statistics==1.0.3.5
 wsgiref==0.1.2
